--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ authors = ["Caaams"]
 clap = { version = "4.5.0", features = ["derive"] }
 regex = "1.5"
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
+rand = "*"
