--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ clap = { version = "4.5.0", features = ["derive"] }
 regex = "1.5"
 log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
 rand = "*"
+http = "1.0.0"
+httparse = "1.3.4"
