--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"
 rand = "*"
 http = "1.0.0"
 httparse = "1.3.4"
+num_cpus = "1.13.0"
