--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "rust_loadbalancer"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-authors = ["Caaams"]
+authors = ["Caaams, KC"]
+
 
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
